fix: Resolve NameError in business content generator

--- a/lecture_business_class4.html
+++ b/lecture_business_class4.html
@@ -16,6 +16,8 @@
 <body class="bg-slate-50 text-slate-900">
 
     <header class="gradient-bg text-white py-12 px-8 relative overflow-hidden">
+        <meta name="course-id" content="business">
+        <meta name="class-id" content="Class 04">
         <div class="absolute top-4 right-4 md:top-6 md:right-8 flex items-center gap-3 z-20">
             <span id="userEmailDisplay" class="text-sm text-white/90 font-medium hidden md:inline"></span>
             <a href="classroom_business.html"
@@ -54,7 +56,7 @@
                                 <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-amber-600 text-white text-sm font-bold rounded-lg hover:bg-amber-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
-                                <button onclick="alert('자료실에서 PDF를 확인하세요.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
+                                <button data-title="TCO & ROI Analysis" onclick="alert('등록된 자료가 없습니다.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
                                     <i class="fas fa-file-download"></i> PDF
                                 </button>
                             </div>
@@ -80,7 +82,7 @@
                                 <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-red-600 text-white text-sm font-bold rounded-lg hover:bg-red-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
-                                <button onclick="alert('자료실에서 PDF를 확인하세요.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
+                                <button data-title="AI Governance & Ethics" onclick="alert('등록된 자료가 없습니다.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
                                     <i class="fas fa-file-download"></i> PDF
                                 </button>
                             </div>
@@ -96,5 +98,6 @@
             else { document.getElementById('userEmailDisplay').innerText = user.email + "님 환영합니다"; }
         });
     </script>
+    <script type="module" src="./js/resource-loader.js"></script>
 </body>
 </html>
