refactor: Decouple admin upload from strict card linkage and link resources page

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -124,10 +124,9 @@
                             </select>
                         </div>
                         <div class="md:col-span-2">
-                            <label class="block text-xs font-medium text-gray-500 mb-1">카드 제목 (정확히 입력)</label>
-                            <input type="text" id="resourceTitle" placeholder="예: LLM과 Transformer 구조"
+                            <label class="block text-xs font-medium text-gray-500 mb-1">자료 제목</label>
+                            <input type="text" id="resourceTitle" placeholder="예: 생성형 AI의 이해, 저작권 가이드"
                                 class="w-full px-4 py-2 border border-gray-200 rounded-lg text-sm">
-                            <p class="text-xs text-red-400 mt-1">* 강의 페이지의 카드 제목과 정확히 일치해야 버튼이 활성화됩니다.</p>
                         </div>
                     </div>
 
