--- a/dashboard.html
+++ b/dashboard.html
@@ -31,6 +31,12 @@
                 <span class="text-xl font-bold text-gray-800">Class Studio</span>
             </a>
 
+            <nav class="hidden md:flex gap-6">
+                <a href="dashboard.html" class="text-indigo-600 font-bold transition-colors">내 강의실</a>
+                <a href="resources.html"
+                    class="text-gray-500 hover:text-indigo-600 font-medium transition-colors">자료실</a>
+            </nav>
+
             <div class="flex items-center gap-4">
                 <span id="userNameDisplay" class="text-sm text-gray-600 font-medium hidden md:block"></span>
                 <button onclick="logout()" class="text-sm text-gray-500 hover:text-indigo-600 transition-colors">
