--- a/lecture_ethics_class1.html
+++ b/lecture_ethics_class1.html
@@ -64,7 +64,7 @@
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
                                 
-        <button data-title="생성형 AI와 저작권 분쟁" onclick="alert('등록된 자료가 없습니다.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
+        <button onclick="window.open('https://firebasestorage.googleapis.com/v0/b/lms01-bc677.firebasestorage.app/o/resources%2F1770156348748_cleaned_AI_Copyright_The_Dojo_Of_Wisdom.pdf?alt=media&token=078a3e99-cd83-48bd-b6b3-fd0ce532e1a9', '_blank')" class="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white text-sm font-bold rounded-lg hover:bg-indigo-700 transition-colors cursor-pointer">
             <i class="fas fa-file-download"></i> PDF
         </button>
         
