--- a/lecture_ethics_class1.html
+++ b/lecture_ethics_class1.html
@@ -92,7 +92,7 @@
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
                                 
-        <button data-title="글로벌 AI 규제: EU AI Act" onclick="alert('등록된 자료가 없습니다.')" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
+        <button onclick="window.open('https://firebasestorage.googleapis.com/v0/b/lms01-bc677.firebasestorage.app/o/resources%2F1770158110908_cleaned_AI_Global_Law_Survival.pdf?alt=media&token=6dcf8a5e-83ff-4eaf-9b6b-4a3dfce2143a', '_blank')" class="inline-flex items-center gap-2 px-4 py-2 bg-blue-600 text-white text-sm font-bold rounded-lg hover:bg-blue-700 transition-colors cursor-pointer">
             <i class="fas fa-file-download"></i> PDF
         </button>
         
