--- a/index.html
+++ b/index.html
@@ -72,6 +72,43 @@
 
 <body class="bg-slate-50">
 
+    <!-- Navigation Bar -->
+    <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-slate-200">
+        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <a href="index.html" class="flex items-center gap-2">
+                <div class="w-8 h-8 bg-purple-600 rounded-lg flex items-center justify-center text-white">
+                    <i class="fas fa-layer-group"></i>
+                </div>
+                <span class="font-bold text-xl text-slate-800" style="font-family: 'Outfit', sans-serif;">AXIS
+                    STUDIO</span>
+            </a>
+
+            <div class="hidden md:flex items-center gap-8">
+                <a href="#courses"
+                    class="text-sm font-semibold text-slate-600 hover:text-purple-600 transition-colors">과정 소개</a>
+                <a href="curriculum.html"
+                    class="text-sm font-semibold text-slate-600 hover:text-purple-600 transition-colors">커리큘럼</a>
+                <a href="#contact"
+                    class="text-sm font-semibold text-slate-600 hover:text-purple-600 transition-colors">문의하기</a>
+            </div>
+
+            <div class="flex items-center gap-4">
+                <button id="mainLoginBtn" onclick="window.openLoginModal()"
+                    class="px-5 py-2.5 bg-purple-600 text-white rounded-full font-bold text-sm hover:bg-purple-700 transition-all shadow-lg shadow-purple-200">
+                    <i class="fas fa-sign-in-alt mr-2"></i> 로그인
+                </button>
+                <button id="mainEnterBtn" onclick="window.location.href='classroom.html'"
+                    class="hidden px-5 py-2.5 bg-emerald-500 text-white rounded-full font-bold text-sm hover:bg-emerald-600 transition-all shadow-lg shadow-emerald-200">
+                    <i class="fas fa-chalkboard-teacher mr-2"></i> 강의실 입장
+                </button>
+                <button id="mainLogoutBtn" onclick="window.userLogout()"
+                    class="hidden px-5 py-2.5 bg-slate-200 text-slate-600 rounded-full font-bold text-sm hover:bg-slate-300 transition-all">
+                    로그아웃
+                </button>
+            </div>
+        </div>
+    </nav>
+
     <!-- Hero Section -->
     <section class="gradient-hero min-h-screen flex items-center justify-center text-white relative overflow-hidden">
         <div class="absolute inset-0 opacity-10">
@@ -935,6 +972,143 @@
         </div>
     </footer>
 
+
+    <!-- Script: Authentication & Dynamic UI -->
+    <script type="module">
+        import { db, auth } from './js/firebase-config.js';
+        import { onAuthStateChanged, signInWithEmailAndPassword, signOut, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+        // ==========================================
+        // 1. UI Injection
+        // ==========================================
+        const injectUI = () => {
+            // A. Inject Login Modal
+            if (!document.getElementById('userLoginModal')) {
+                const modalHTML = `
+                <div id="userLoginModal" class="fixed inset-0 z-[100] hidden">
+                    <div class="absolute inset-0 bg-black/60 backdrop-blur-sm" onclick="window.closeLoginModal()"></div>
+                    <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white w-full max-w-sm rounded-2xl shadow-2xl p-8 transform transition-all">
+                        <div class="text-center mb-6">
+                            <div class="w-12 h-12 bg-indigo-100 text-indigo-600 rounded-full flex items-center justify-center mx-auto mb-3 text-xl">
+                                <i class="fas fa-user-graduate"></i>
+                            </div>
+                            <h3 class="text-2xl font-bold text-gray-800">수강생 로그인</h3>
+                            <p class="text-gray-500 text-sm mt-1">강의실 입장을 위해 로그인해주세요</p>
+                        </div>
+                        
+                        <div class="space-y-4">
+                            <button id="googleLoginBtn" type="button" class="w-full py-3 bg-white border border-gray-300 text-gray-700 rounded-xl font-bold hover:bg-gray-50 transition-colors shadow-sm flex items-center justify-center gap-2">
+                                <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5">
+                                구글 계정으로 로그인
+                            </button>
+                            
+                            <div class="relative flex py-2 items-center">
+                                <div class="flex-grow border-t border-gray-200"></div>
+                                <span class="flex-shrink-0 mx-4 text-gray-400 text-xs">또는 이메일로 로그인</span>
+                                <div class="flex-grow border-t border-gray-200"></div>
+                            </div>
+
+                            <form id="userLoginForm" class="space-y-4">
+                                <div>
+                                    <input type="email" id="userEmail" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-indigo-500 focus:outline-none" placeholder="이메일" required>
+                                </div>
+                                <div>
+                                    <input type="password" id="userPw" class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-indigo-500 focus:outline-none" placeholder="비밀번호" required>
+                                </div>
+                                <button type="submit" class="w-full py-3 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors shadow-lg shadow-indigo-200">
+                                    이메일 로그인
+                                </button>
+                            </form>
+                        </div>
+                        <button onclick="window.closeLoginModal()" class="w-full mt-3 py-2 text-gray-400 hover:text-gray-600 text-sm font-medium">닫기</button>
+                    </div>
+                </div>`;
+                document.body.insertAdjacentHTML('beforeend', modalHTML);
+
+                setTimeout(() => {
+                    // Email Login Logic
+                    const loginForm = document.getElementById('userLoginForm');
+                    if (loginForm) {
+                        loginForm.addEventListener('submit', async (e) => {
+                            e.preventDefault();
+                            const email = document.getElementById('userEmail').value;
+                            const pw = document.getElementById('userPw').value;
+                            const btn = loginForm.querySelector('button[type="submit"]');
+
+                            try {
+                                btn.innerHTML = '<i class="fas fa-circle-notch fa-spin"></i> 로그인 중...';
+                                btn.disabled = true;
+                                await signInWithEmailAndPassword(auth, email, pw);
+                                window.closeLoginModal();
+                            } catch (error) {
+                                console.error(error);
+                                alert("로그인 실패: 이메일 또는 비밀번호를 확인해주세요.");
+                                btn.disabled = false;
+                                btn.innerHTML = '이메일 로그인';
+                            }
+                        });
+                    }
+
+                    // Google Login Logic
+                    const googleBtn = document.getElementById('googleLoginBtn');
+                    if (googleBtn) {
+                        googleBtn.addEventListener('click', async () => {
+                            try {
+                                const provider = new GoogleAuthProvider();
+                                await signInWithPopup(auth, provider);
+                                window.closeLoginModal();
+                            } catch (error) {
+                                console.error("Google Login Error:", error);
+                                alert("구글 로그인 실패: " + error.message);
+                            }
+                        });
+                    }
+                }, 100);
+            }
+        };
+
+        // Run Injection
+        injectUI();
+
+        // ==========================================
+        // 2. Auth State Logic
+        // ==========================================
+        onAuthStateChanged(auth, async (user) => {
+            const loginBtn = document.getElementById('mainLoginBtn');
+            const enterBtn = document.getElementById('mainEnterBtn');
+            const logoutBtn = document.getElementById('mainLogoutBtn');
+
+            if (user) {
+                // Logged In
+                if (loginBtn) loginBtn.classList.add('hidden');
+                if (enterBtn) {
+                    enterBtn.classList.remove('hidden');
+                    enterBtn.title = user.email + "님 환영합니다";
+                }
+                if (logoutBtn) logoutBtn.classList.remove('hidden');
+            } else {
+                // Logged Out
+                if (loginBtn) loginBtn.classList.remove('hidden');
+                if (enterBtn) enterBtn.classList.add('hidden');
+                if (logoutBtn) logoutBtn.classList.add('hidden');
+            }
+        });
+
+        // Global Functions
+        window.openLoginModal = () => document.getElementById('userLoginModal').classList.remove('hidden');
+        window.closeLoginModal = () => document.getElementById('userLoginModal').classList.add('hidden');
+        window.userLogout = () => {
+            if (confirm("로그아웃 하시겠습니까?")) signOut(auth).then(() => window.location.reload());
+        };
+
+        // Auto-open login modal if ?apply=true is in URL
+        window.addEventListener('load', () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.get('apply') === 'true') {
+                setTimeout(() => window.openLoginModal(), 500);
+            }
+        });
+    </script>
 </body>
 
 </html>
