--- a/c12_ethics/lecture_ethics_class1.html
+++ b/c12_ethics/lecture_ethics_class1.html
@@ -176,14 +176,15 @@
                             <i class="fas fa-building text-2xl"></i>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">기업 데이터 유출 사고 사례</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">삼성전자 등 주요 기업의 생성형 AI 도입 초기 데이터 유출 사고와
-                                시사점을 분석합니다.</p>
+                            <h3 class="text-xl font-bold mb-2">AI에 의한 저작권, 정보보안, 기술비밀 유출의 대응 전략</h3>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">생성형 AI 도입 시 발생할 수 있는 저작권 침해, 정보 유출,
+                                기술 비밀 누설 등 3대 리스크의 대응 전략을 학습합니다.</p>
                             <div class="flex flex-wrap gap-2 mb-4">
                                 <span
-                                    class="bg-slate-50 text-slate-700 px-3 py-1 rounded-md text-xs font-semibold">Security</span><span
-                                    class="bg-slate-50 text-slate-700 px-3 py-1 rounded-md text-xs font-semibold">Data
-                                    Leak</span>
+                                    class="bg-slate-50 text-slate-700 px-3 py-1 rounded-md text-xs font-semibold">Security
+                                    Strategy</span><span
+                                    class="bg-slate-50 text-slate-700 px-3 py-1 rounded-md text-xs font-semibold">Trade
+                                    Secret</span>
                             </div>
                             <div class="flex gap-2">
                                 <a href="textbook_ethics_leak.html"
@@ -195,7 +196,7 @@
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
 
-                                <button data-title="기업 데이터 유출 사고 사례" onclick="alert('등록된 자료가 없습니다.')"
+                                <button data-title="AI에 의한 저작권, 정보보안, 기술비밀 유출의 대응 전략" onclick="alert('등록된 자료가 없습니다.')"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
                                     <i class="fas fa-file-download"></i> PDF
                                 </button>
