feat: link PDF for AI Response Strategies card

--- a/c12_ethics/lecture_ethics_class1.html
+++ b/c12_ethics/lecture_ethics_class1.html
@@ -196,8 +196,9 @@
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
 
-                                <button data-title="AI에 의한 저작권, 정보보안, 기술비밀 유출의 대응 전략" onclick="alert('등록된 자료가 없습니다.')"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-slate-200 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-300 transition-colors">
+                                <button data-title="AI에 의한 저작권, 정보보안, 기술비밀 유출의 대응 전략"
+                                    onclick="window.open('https://firebasestorage.googleapis.com/v0/b/lms01-bc677.firebasestorage.app/o/resources%2F1770169750765_cleaned_AI_Era_Survival_Copyright_and_Security.pdf?alt=media&token=4d478960-d8ec-49bc-aee9-8a4694027cbc', '_blank')"
+                                    class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-white text-sm font-bold rounded-lg hover:bg-slate-700 transition-colors cursor-pointer">
                                     <i class="fas fa-file-download"></i> PDF
                                 </button>
 
