feat: content update - dynamic course headers and tool counts

--- a/c09_leadership/management_leadership.html
+++ b/c09_leadership/management_leadership.html
@@ -304,9 +304,8 @@
             <div class="text-center mb-16">
                 <span class="text-purple-600 font-semibold text-sm uppercase tracking-wider">Essential AI Tools</span>
                 <h2 class="text-3xl md:text-4xl font-bold mt-2 text-gray-800">
-                    8일간 마스터할 <span
-                        class="text-transparent bg-clip-text bg-gradient-to-r from-purple-600 to-indigo-600">10대 AI
-                        도구</span>
+                    AI시대의 리더십과 <span
+                        class="text-transparent bg-clip-text bg-gradient-to-r from-purple-600 to-indigo-600">4대 AI 도구</span>
                 </h2>
             </div>
 
