--- a/c03_master_class/master_index.html
+++ b/c03_master_class/master_index.html
@@ -375,9 +375,8 @@
             <div class="text-center mb-16">
                 <span class="text-purple-600 font-semibold text-sm uppercase tracking-wider">Essential AI Tools</span>
                 <h2 class="text-3xl md:text-4xl font-bold mt-2 text-gray-800">
-                    8일간 마스터할 <span
-                        class="text-transparent bg-clip-text bg-gradient-to-r from-purple-600 to-indigo-600">10대 AI
-                        도구</span>
+                    AI 실무 마스터 클래스과 <span
+                        class="text-transparent bg-clip-text bg-gradient-to-r from-purple-600 to-indigo-600">2대 AI 도구</span>
                 </h2>
             </div>
 
