style: update master_index background image to new app course image

--- a/c03_master_class/master_index.html
+++ b/c03_master_class/master_index.html
@@ -15,7 +15,7 @@
         }
 
         .gradient-hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/intro_business_bg.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/master_class_bg.jpg');
             background-size: cover;
             background-position: center;
         }
