--- a/c02_business/lecture_business_day1.html
+++ b/c02_business/lecture_business_day1.html
@@ -50,70 +50,186 @@
                 <span class="font-bold text-xs tracking-widest">Day 1</span>
                 <h2 class="text-lg font-bold">비즈니스 혁신과 기회</h2>
             </div>
-            <div class="grid md:grid-cols-2 gap-6">
-                <div
-                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-blue-200 transition-all group relative overflow-hidden">
-                    <div
-                        class="absolute top-0 right-0 bg-blue-100 text-blue-700 text-xs font-bold px-3 py-1 rounded-bl-xl">
-                        오전</div>
-                    <div class="flex items-start gap-4">
-                        <div
-                            class="bg-blue-50 text-blue-600 p-3 rounded-2xl group-hover:bg-blue-600 group-hover:text-white transition-colors">
-                            <i class="fas fa-chart-line text-2xl"></i>
+            <div class="space-y-6">
+                <!-- Session 1 -->
+                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-blue-300 transition-all">
+                    <div class="flex flex-col md:flex-row gap-4 items-start">
+                        <div class="flex-shrink-0 w-full md:w-32 bg-blue-50 rounded-xl p-3 text-center">
+                            <span class="block text-blue-700 font-bold text-lg">09:00</span>
+                            <span class="block text-blue-500 text-sm font-medium">- 11:00</span>
+                            <span class="block text-slate-400 text-xs mt-1">(2h)</span>
                         </div>
-                        <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">산업별 AI 혁신 사례 (Case Study)</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">금융, 제조, 유통 등 주요 산업군의 성공적인 AI 도입 사례를
-                                심층 분석합니다.</p>
-                            <div class="flex flex-wrap gap-2 mb-4">
-                                <span
-                                    class="bg-blue-50 text-blue-700 px-3 py-1 rounded-md text-xs font-semibold">Finance</span><span
-                                    class="bg-blue-50 text-blue-700 px-3 py-1 rounded-md text-xs font-semibold">Retail</span><span
-                                    class="bg-blue-50 text-blue-700 px-3 py-1 rounded-md text-xs font-semibold">Mfg</span>
+                        <div class="flex-grow space-y-3">
+                            <div>
+                                <h3 class="text-xl font-bold text-slate-800">글로벌 AI 비즈니스 트렌드 및 멀티미디어 활용</h3>
+                                <p class="text-slate-500 text-sm mt-1">2026년 AI 트렌드를 이해하고, 기업 실무(보고서/홍보 콘텐츠 제작)에 미치는 변화를 파악</p>
                             </div>
-                            <div class="flex gap-2">
-                                <a href="textbook_business_cases.html"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
-                                    <i class="fas fa-book-reader"></i> 강의 보기
-                                </a>
-                                <a href="/ai-lecture-room/dist/index.html" target="_blank"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-blue-600 text-white text-sm font-bold rounded-lg hover:bg-blue-700 transition-colors">
-                                    <i class="fas fa-play-circle"></i> 강의 듣기
-                                </a>
+                            <div class="grid md:grid-cols-2 gap-4 text-sm bg-slate-50 p-4 rounded-xl">
+                                <div>
+                                    <span class="font-bold text-slate-700 block mb-1">핵심 내용</span>
+                                    <ul class="list-disc list-inside text-slate-600 space-y-1">
+                                        <li>최신 AI 트렌드: LLM 기업 도입 & Agent AI 시대</li>
+                                        <li>생성형 AI 생태계 분석 (ChatGPT, Gemini 등)</li>
+                                        <li>마케팅/교육용 AI 이미지 & 비디오 생성 실습</li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <div class="mb-2">
+                                        <span class="font-bold text-slate-700 block mb-1">역량</span>
+                                        <span class="text-slate-600">최신 AI 기술 동향 파악 및 콘텐츠 제작</span>
+                                    </div>
+                                    <div>
+                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
+                                        <span class="inline-block bg-blue-100 text-blue-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 1, 2</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div
-                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-indigo-200 transition-all group relative overflow-hidden">
-                    <div
-                        class="absolute top-0 right-0 bg-indigo-100 text-indigo-700 text-xs font-bold px-3 py-1 rounded-bl-xl">
-                        오후</div>
-                    <div class="flex items-start gap-4">
-                        <div
-                            class="bg-indigo-50 text-indigo-600 p-3 rounded-2xl group-hover:bg-indigo-600 group-hover:text-white transition-colors">
-                            <i class="fas fa-lightbulb text-2xl"></i>
+                <!-- Session 2 -->
+                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-indigo-300 transition-all">
+                    <div class="flex flex-col md:flex-row gap-4 items-start">
+                        <div class="flex-shrink-0 w-full md:w-32 bg-indigo-50 rounded-xl p-3 text-center">
+                            <span class="block text-indigo-700 font-bold text-lg">11:00</span>
+                            <span class="block text-indigo-500 text-sm font-medium">- 11:50</span>
+                            <span class="block text-slate-400 text-xs mt-1">(1h)</span>
                         </div>
-                        <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">AI 기반 신규 비즈니스 모델 발굴</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">AI를 통해 기존 가치 사슬을 재정의하고 새로운 수익 모델을
-                                설계합니다. (BM Canvas)</p>
-                            <div class="flex flex-wrap gap-2 mb-4">
-                                <span
-                                    class="bg-indigo-50 text-indigo-700 px-3 py-1 rounded-md text-xs font-semibold">Biz
-                                    Model</span><span
-                                    class="bg-indigo-50 text-indigo-700 px-3 py-1 rounded-md text-xs font-semibold">Innovation</span>
+                        <div class="flex-grow space-y-3">
+                            <div>
+                                <h3 class="text-xl font-bold text-slate-800">비즈니스 AI의 구조적 이해</h3>
+                                <p class="text-slate-500 text-sm mt-1">실무 환경에서 AI가 문제를 해결하는 매커니즘 이해 (데이터-학습-추론)</p>
                             </div>
-                            <div class="flex gap-2">
-                                <a href="textbook_business_bm.html"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
-                                    <i class="fas fa-book-reader"></i> 강의 보기
-                                </a>
-                                <a href="/ai-lecture-room/dist/index.html" target="_blank"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white text-sm font-bold rounded-lg hover:bg-indigo-700 transition-colors">
-                                    <i class="fas fa-play-circle"></i> 강의 듣기
-                                </a>
+                            <div class="grid md:grid-cols-2 gap-4 text-sm bg-slate-50 p-4 rounded-xl">
+                                <div>
+                                    <span class="font-bold text-slate-700 block mb-1">핵심 내용</span>
+                                    <ul class="list-disc list-inside text-slate-600 space-y-1">
+                                        <li>AI/Data/Model: 데이터가 모델을 만날 때의 가치</li>
+                                        <li>CV 사례: 물류, 보안, 품질 관리 자동화 원리</li>
+                                        <li>산업 현장 CV 기술 적용 로드맵</li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <div class="mb-2">
+                                        <span class="font-bold text-slate-700 block mb-1">역량</span>
+                                        <span class="text-slate-600">AI 기본 원리 기반 비즈니스 응용력</span>
+                                    </div>
+                                    <div>
+                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
+                                        <span class="inline-block bg-indigo-100 text-indigo-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 8, 11, 23</span>
+                                        <span class="inline-block bg-green-100 text-green-700 px-2 py-0.5 rounded text-xs font-bold ml-1">AI4Sus 10</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Session 3 -->
+                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-purple-300 transition-all">
+                    <div class="flex flex-col md:flex-row gap-4 items-start">
+                        <div class="flex-shrink-0 w-full md:w-32 bg-purple-50 rounded-xl p-3 text-center">
+                            <span class="block text-purple-700 font-bold text-lg">13:00</span>
+                            <span class="block text-purple-500 text-sm font-medium">- 13:50</span>
+                            <span class="block text-slate-400 text-xs mt-1">(1h)</span>
+                        </div>
+                        <div class="flex-grow space-y-3">
+                            <div>
+                                <h3 class="text-xl font-bold text-slate-800">주요 AI 기술 - 비전 인식과 생성 원리</h3>
+                                <p class="text-slate-500 text-sm mt-1">비즈니스 비주얼 데이터를 다루는 AI의 기본 구조 파악</p>
+                            </div>
+                            <div class="grid md:grid-cols-2 gap-4 text-sm bg-slate-50 p-4 rounded-xl">
+                                <div>
+                                    <span class="font-bold text-slate-700 block mb-1">핵심 내용</span>
+                                    <ul class="list-disc list-inside text-slate-600 space-y-1">
+                                        <li>Computer Vision 원리: 인식과 분류 과정</li>
+                                        <li>생성형 AI 원리: Diffusion 및 Transformer 기초</li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <div class="mb-2">
+                                        <span class="font-bold text-slate-700 block mb-1">역량</span>
+                                        <span class="text-slate-600">시각 데이터 처리(CV) 및 생성 원리 습득</span>
+                                    </div>
+                                    <div>
+                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
+                                        <span class="inline-block bg-purple-100 text-purple-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 20~23, 31</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Session 4 -->
+                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-pink-300 transition-all">
+                    <div class="flex flex-col md:flex-row gap-4 items-start">
+                        <div class="flex-shrink-0 w-full md:w-32 bg-pink-50 rounded-xl p-3 text-center">
+                            <span class="block text-pink-700 font-bold text-lg">14:00</span>
+                            <span class="block text-pink-500 text-sm font-medium">- 15:50</span>
+                            <span class="block text-slate-400 text-xs mt-1">(2h)</span>
+                        </div>
+                        <div class="flex-grow space-y-3">
+                            <div>
+                                <h3 class="text-xl font-bold text-slate-800">고성능 비즈니스 문서 제작 AI 앱 실무</h3>
+                                <p class="text-slate-500 text-sm mt-1">문서 작업 시간을 80% 이상 단축하는 실무 워크플로우 구축</p>
+                            </div>
+                            <div class="grid md:grid-cols-2 gap-4 text-sm bg-slate-50 p-4 rounded-xl">
+                                <div>
+                                    <span class="font-bold text-slate-700 block mb-1">핵심 내용</span>
+                                    <ul class="list-disc list-inside text-slate-600 space-y-1">
+                                        <li>LLM 오피스 도구: Gemini, ChatGPT (데이터 분석)</li>
+                                        <li>Genspark 활용 시장 조사 및 슬라이드 구성</li>
+                                        <li>실습: 기획서, IR, 매뉴얼, 웹 콘텐츠 제작</li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <div class="mb-2">
+                                        <span class="font-bold text-slate-700 block mb-1">역량</span>
+                                        <span class="text-slate-600">LLM 기반 기획안/보고서/슬라이드 자동 생성</span>
+                                    </div>
+                                    <div>
+                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
+                                        <span class="inline-block bg-pink-100 text-pink-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 32</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Session 5 -->
+                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-emerald-300 transition-all">
+                    <div class="flex flex-col md:flex-row gap-4 items-start">
+                        <div class="flex-shrink-0 w-full md:w-32 bg-emerald-50 rounded-xl p-3 text-center">
+                            <span class="block text-emerald-700 font-bold text-lg">16:00</span>
+                            <span class="block text-emerald-500 text-sm font-medium">- 16:50</span>
+                            <span class="block text-slate-400 text-xs mt-1">(1h)</span>
+                        </div>
+                        <div class="flex-grow space-y-3">
+                            <div>
+                                <h3 class="text-xl font-bold text-slate-800">Vibe Coding: 코딩 없는 업무 앱 개발 기초</h3>
+                                <p class="text-slate-500 text-sm mt-1">코딩 지식 없이도 '설명'만으로 동작하는 업무 도구의 개념 이해</p>
+                            </div>
+                            <div class="grid md:grid-cols-2 gap-4 text-sm bg-slate-50 p-4 rounded-xl">
+                                <div>
+                                    <span class="font-bold text-slate-700 block mb-1">핵심 내용</span>
+                                    <ul class="list-disc list-inside text-slate-600 space-y-1">
+                                        <li>Vibe Coding: 자연어 프롬프트가 코드가 되는 과정</li>
+                                        <li>나만의 업무 보조 챗봇 기초 설계 실습</li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <div class="mb-2">
+                                        <span class="font-bold text-slate-700 block mb-1">역량</span>
+                                        <span class="text-slate-600">Google AI Studio 기반 자연어 앱 개발 입문</span>
+                                    </div>
+                                    <div>
+                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
+                                        <span class="inline-block bg-emerald-100 text-emerald-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 32</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
