Update intro page with new curriculum summaries

--- a/c02_business/intro_business.html
+++ b/c02_business/intro_business.html
@@ -252,21 +252,21 @@
                                 1
                             </div>
                             <div class="flex-grow">
-                                <h3 class="text-xl font-bold text-gray-800 mb-2">Day 1: 문서 자동화의 기적</h3>
-                                <p class="text-gray-600 mb-4">회의록, 보고서, 제안서 작성 시간 90% 단축하기</p>
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">Day 1: AI 트렌드와 비즈니스 기회</h3>
+                                <p class="text-gray-600 mb-4">최신 AI 기술 동향 파악 및 콘텐츠 제작 (8시간)</p>
                                 <div class="bg-gray-50 rounded-xl p-4">
                                     <ul class="space-y-2">
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>음성 녹음(Clova Note) 회의록 자동 변환</span>
+                                            <span>글로벌 AI 트렌드 및 멀티미디어 활용</span>
                                         </li>
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>Notion AI로 프로젝트 일정 관리하기</span>
+                                            <span>비즈니스 AI의 구조적 이해 및 CV 기술</span>
                                         </li>
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>ChatGPT로 시장 조사 보고서 초안 쓰기</span>
+                                            <span>고성능 비즈니스 문서 제작 및 Vibe Coding 기초</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -284,21 +284,21 @@
                                 2
                             </div>
                             <div class="flex-grow">
-                                <h3 class="text-xl font-bold text-gray-800 mb-2">Day 2: 비즈니스 시각화 & 발표</h3>
-                                <p class="text-gray-600 mb-4">설득력 있는 프레젠테이션 자료 자동 생성</p>
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">Day 2: AI 도입 로드맵 수립</h3>
+                                <p class="text-gray-600 mb-4">전략 수립부터 Vibe Coding을 활용한 실무 앱 개발까지 (8시간)</p>
                                 <div class="bg-gray-50 rounded-xl p-4">
                                     <ul class="space-y-2">
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>Gamma로 텍스트를 PPT로 1분 만에 변환</span>
+                                            <span>AI 성숙도 진단 및 PoC 기획</span>
                                         </li>
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>Midjourney로 저작권 걱정 없는 이미지 생성</span>
+                                            <span>프롬프트 엔지니어링 및 NLP/Stat 이해</span>
                                         </li>
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>DeepL로 해외 바이어 이메일 및 제안서 번역</span>
+                                            <span>Vibe Coding 기반 업무 앱 개발 실습</span>
                                         </li>
                                     </ul>
                                 </div>
