Update AI Basics curriculum to 1-day format

--- a/c01_basics/intro_basics.html
+++ b/c01_basics/intro_basics.html
@@ -243,31 +243,32 @@
             </div>
 
             <div class="max-w-4xl mx-auto space-y-4">
-                <!-- Module 1 -->
+                <!-- Session 1 -->
                 <div
                     class="bg-white rounded-2xl border border-gray-200 overflow-hidden hover:border-indigo-300 transition-colors shadow-sm">
                     <div class="p-6 md:p-8">
                         <div class="flex items-start gap-4">
                             <div
-                                class="flex-shrink-0 w-12 h-12 bg-indigo-50 rounded-xl flex items-center justify-center text-indigo-600 font-bold text-xl">
-                                1
+                                class="flex-shrink-0 w-16 h-12 bg-indigo-50 rounded-xl flex items-center justify-center text-indigo-600 font-bold text-lg">
+                                09:00
                             </div>
                             <div class="flex-grow">
-                                <h3 class="text-xl font-bold text-gray-800 mb-2">오전: 생성형 AI와 친해지기</h3>
-                                <p class="text-gray-600 mb-4">LLM의 원리 이해와 3대 AI(ChatGPT, Gemini, Claude) 비교</p>
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">AI의 이해와 도구 세팅</h3>
+                                <p class="text-gray-600 mb-4">생성형 AI의 원리, LLM vs SLM, 주요 툴(ChatGPT, Claude, Gemini) 특징
+                                    비교 및 계정 설정</p>
                                 <div class="bg-gray-50 rounded-xl p-4">
                                     <ul class="space-y-2">
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>할루시네이션(환각)의 원리와 대처법</span>
+                                            <span>LLM 작동 원리 (Token, Probability)</span>
                                         </li>
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>나에게 맞는 최적의 AI 모델 찾기</span>
+                                            <span>Hallucination(환각) 이해 및 대처</span>
                                         </li>
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>모바일 앱 설치 및 기본 세팅</span>
+                                            <span>모바일 앱 설치 및 PC 환경 세팅</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -275,31 +276,139 @@
                         </div>
                     </div>
                 </div>
-                <!-- Module 2 -->
+
+                <!-- Session 2 -->
                 <div
                     class="bg-white rounded-2xl border border-gray-200 overflow-hidden hover:border-indigo-300 transition-colors shadow-sm">
                     <div class="p-6 md:p-8">
                         <div class="flex items-start gap-4">
                             <div
-                                class="flex-shrink-0 w-12 h-12 bg-indigo-50 rounded-xl flex items-center justify-center text-indigo-600 font-bold text-xl">
-                                2
+                                class="flex-shrink-0 w-16 h-12 bg-indigo-50 rounded-xl flex items-center justify-center text-indigo-600 font-bold text-lg">
+                                11:00
                             </div>
                             <div class="flex-grow">
-                                <h3 class="text-xl font-bold text-gray-800 mb-2">오후: 프롬프트 엔지니어링 기초</h3>
-                                <p class="text-gray-600 mb-4">원하는 결과를 한 번에 얻는 질문의 기술</p>
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">누구나 가능한 프롬프트 엔지니어링</h3>
+                                <p class="text-gray-600 mb-4">원하는 결과를 정확히 얻는 프롬프트 작성의 핵심 공식 (Persona, Context, Task,
+                                    Format)</p>
                                 <div class="bg-gray-50 rounded-xl p-4">
                                     <ul class="space-y-2">
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>명확한 지시어(Persona, Context) 작성법</span>
+                                            <span>프롬프트 4요소 (PCTF) 공식 실습</span>
                                         </li>
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>자료 요약 및 이메일 초안 작성 실습</span>
+                                            <span>Zero-shot vs Few-shot 차이점</span>
                                         </li>
                                         <li class="flex items-start gap-2 text-sm text-gray-700">
                                             <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
-                                            <span>엑셀 수식 및 번역 업무 자동화</span>
+                                            <span>역할 부여(Persona) 효과 체험</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Lunch -->
+                <div class="flex items-center justify-center py-4">
+                    <div class="bg-gray-100 rounded-full px-6 py-2 text-sm text-gray-500 font-medium">
+                        <i class="fas fa-utensils mr-2"></i>점심 시간 (12:00 - 13:00)
+                    </div>
+                </div>
+
+                <!-- Session 3 -->
+                <div
+                    class="bg-white rounded-2xl border border-gray-200 overflow-hidden hover:border-indigo-300 transition-colors shadow-sm">
+                    <div class="p-6 md:p-8">
+                        <div class="flex items-start gap-4">
+                            <div
+                                class="flex-shrink-0 w-16 h-12 bg-indigo-50 rounded-xl flex items-center justify-center text-indigo-600 font-bold text-lg">
+                                13:00
+                            </div>
+                            <div class="flex-grow">
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">AI로 업무 시간 3배 단축하기</h3>
+                                <p class="text-gray-600 mb-4">이메일 작성, 회의록 요약, 보고서 초안 등 실무 자동화 실습</p>
+                                <div class="bg-gray-50 rounded-xl p-4">
+                                    <ul class="space-y-2">
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>이메일/공문 자동 작성 및 톤앤매너 조절</span>
+                                        </li>
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>긴 문서 요약 및 핵심 내용 추출</span>
+                                        </li>
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>엑셀 수식/함수 생성 도우미 활용</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Session 4 -->
+                <div
+                    class="bg-white rounded-2xl border border-gray-200 overflow-hidden hover:border-indigo-300 transition-colors shadow-sm">
+                    <div class="p-6 md:p-8">
+                        <div class="flex items-start gap-4">
+                            <div
+                                class="flex-shrink-0 w-16 h-12 bg-indigo-50 rounded-xl flex items-center justify-center text-indigo-600 font-bold text-lg">
+                                15:00
+                            </div>
+                            <div class="flex-grow">
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">스마트한 검색과 데이터 분석</h3>
+                                <p class="text-gray-600 mb-4">Perplexity 등을 활용한 심층 검색과 데이터 기반 의사결정 지원</p>
+                                <div class="bg-gray-50 rounded-xl p-4">
+                                    <ul class="space-y-2">
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>AI 검색 엔진(Perplexity) 활용법</span>
+                                        </li>
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>데이터 파일 업로드 및 분석 요청</span>
+                                        </li>
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>인사이트 도출 및 시각화 아이디어</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Session 5 -->
+                <div
+                    class="bg-white rounded-2xl border border-gray-200 overflow-hidden hover:border-indigo-300 transition-colors shadow-sm">
+                    <div class="p-6 md:p-8">
+                        <div class="flex items-start gap-4">
+                            <div
+                                class="flex-shrink-0 w-16 h-12 bg-indigo-50 rounded-xl flex items-center justify-center text-indigo-600 font-bold text-lg">
+                                16:30
+                            </div>
+                            <div class="flex-grow">
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">나만의 AI 비서 만들기 & 마무리</h3>
+                                <p class="text-gray-600 mb-4">Custom Instructions 및 GPTs 기초 활용으로 나만의 비서 세팅</p>
+                                <div class="bg-gray-50 rounded-xl p-4">
+                                    <ul class="space-y-2">
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>ChatGPT 맞춤 설정(Custom Instructions)</span>
+                                        </li>
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>나만의 GPTs 만들기 기초 실습</span>
+                                        </li>
+                                        <li class="flex items-start gap-2 text-sm text-gray-700">
+                                            <i class="fas fa-check-circle text-indigo-500 mt-1"></i>
+                                            <span>마무리: 저작권 및 윤리적 유의사항</span>
                                         </li>
                                     </ul>
                                 </div>
