--- a/c01_basics/classroom_basics.html
+++ b/c01_basics/classroom_basics.html
@@ -71,7 +71,7 @@
 
         <div class="space-y-6">
 
-            <!-- Module 1 -->
+            <!-- Module 1 (Day 1) -->
             <div
                 class="bg-white rounded-3xl p-1 shadow-xl shadow-slate-200/50 border border-white hover:border-indigo-100 transition-all duration-300 group">
                 <div
@@ -84,12 +84,11 @@
                         <div>
                             <span
                                 class="text-indigo-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">01</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 1: 생성형 AI 원리 이해
-                                (오전)</h2>
-                            <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">LLM의 작동 방식과 프롬프트
-                                엔지니어링 기초 (4시간)</p>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 1: AI 기초 및 활용</h2>
+                            <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">AI 이해, 프롬프트, 업무 자동화,
+                                데이터 분석, 나만의 비서 (8시간)</p>
                         </div>
-                        <a href="lecture_basics_class1.html"
+                        <a href="lecture_basics_day1.html"
                             class="bg-white text-indigo-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
                             <i class="fas fa-play"></i> 학습하기
                         </a>
@@ -100,16 +99,22 @@
                     <ul class="space-y-3 text-sm text-slate-600 font-medium">
 
                         <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>LLM과 Transformer 구조</span>
+                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>AI의 이해와 도구 세팅 (LLM, 모바일/PC
+                                설정)</span>
                         </li>
                         <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>Token과 Context Window
-                                이해</span></li>
+                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>누구나 가능한 프롬프트 엔지니어링 (PCTF
+                                공식)</span></li>
                         <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>Zero-shot vs Few-shot
-                                Prompting</span></li>
+                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>AI로 업무 시간 3배 단축하기 (문서 요약,
+                                엑셀)</span></li>
                         <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>Hallucination과 RAG 기초</span>
+                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>스마트한 검색과 데이터 분석
+                                (Perplexity)</span>
+                        </li>
+                        <li class="flex items-start gap-2"><i
+                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>나만의 AI 비서 만들기 (Custom
+                                Instructions)</span>
                         </li>
                     </ul>
                 </div>
